Fix Windows pathing issues in WSProviderPlugin